--- a/plugin_example/Makefile
+++ b/plugin_example/Makefile
@@ -2,16 +2,15 @@ CC := gcc
 CFLAGS := -fPIC
 LDFLAGS := -shared
 TARGET := libplugin
-GO := go
 
 # Detect the operating system
 ifeq ($(OS),Windows_NT)
-    C_TARGET := cwrite_plugin.dll
+    TARGET := cwrite_plugin.dll
     GO_TARGET := gowrite_plugin.dll
 else
     UNAME_S := $(shell uname -s)
     ifeq ($(UNAME_S),Linux)
-        C_TARGET := libcwrite_plugin.so
+        TARGET := libcwrite_plugin.so
         GO_TARGET := libgowrite_plugin.so
     endif
     ifeq ($(UNAME_S),Darwin)
@@ -24,13 +23,10 @@ endif
 SRC := write_plugin.c
 
 # Default target
-all: $(GO_TARGET)
-
-$(GO_TARGET): $(C_TARGET)
-	$(GO) build -buildmode=plugin -o $(GO_TARGET) write_plugin.go
+all: $(TARGET)
 
 # Build target for shared library
-$(C_TARGET): $(SRC)
+$(TARGET): $(SRC)
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
 
 # Clean target
